# RNovModularDB

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/rnmdb-catalog/: Cargo.toml
crates/rnmdb-catalog/src/: lib.rs
crates/rnmdb-cli/: Cargo.toml
crates/rnmdb-cli/src/: lib.rs  main.rs  output.rs
crates/rnmdb-executor/: Cargo.toml
crates/rnmdb-executor/src/: column_crypto.rs  durable.rs  lib.rs  memory.rs  row.rs  vector.rs
crates/rnmdb-executor/src/memory/: async_task.rs  mutation_policy.rs  set_ops.rs  sort.rs
crates/rnmdb-fts/: Cargo.toml
crates/rnmdb-fts/src/: lib.rs
crates/rnmdb-index/: Cargo.toml
crates/rnmdb-index/src/: lib.rs
crates/rnmdb-instance/: Cargo.toml
crates/rnmdb-instance/src/: lib.rs
crates/rnmdb-planner/: Cargo.toml
crates/rnmdb-planner/src/: cost.rs  lib.rs  logical.rs  optimizer.rs  physical.rs
crates/rnmdb-security/: Cargo.toml
crates/rnmdb-security/src/: lib.rs
crates/rnmdb-server/: Cargo.toml
crates/rnmdb-server/src/: lib.rs  sql_protocol.rs
crates/rnmdb-sql/: Cargo.toml
crates/rnmdb-sql/src/: ast.rs  binder.rs  expr_mutator.rs  lexer.rs  lib.rs  parser.rs
crates/rnmdb-sql/src/parser/: grouping.rs
crates/rnmdb-storage/: Cargo.toml
crates/rnmdb-storage/src/: lib.rs  single_file_rekey.rs  single_file_upgrade.rs
crates/rnmdb-storage/src/single_file_upgrade/: legacy.rs
crates/rnmdb-txn/: Cargo.toml
crates/rnmdb-txn/src/: lib.rs
crates/rnmdb-types/: Cargo.toml
crates/rnmdb-types/src/: lib.rs
crates/rnmdb-udf/: Cargo.toml
crates/rnmdb-udf/src/: lib.rs  registry.rs  wasm_runtime.rs
crates/rnovdb-catalog/: Cargo.toml
crates/rnovdb-catalog/src/: lib.rs
crates/rnovdb-cli/: Cargo.toml
crates/rnovdb-cli/src/: lib.rs  main.rs
crates/rnovdb-common/: Cargo.toml
crates/rnovdb-common/src/: error.rs  lib.rs
crates/rnovdb-executor/: Cargo.toml
crates/rnovdb-executor/src/: lib.rs  memory.rs  row.rs  vector.rs
crates/rnovdb-fts/: Cargo.toml
crates/rnovdb-fts/src/: lib.rs
crates/rnovdb-index/: Cargo.toml
crates/rnovdb-index/src/: lib.rs
crates/rnovdb-instance/: Cargo.toml
crates/rnovdb-instance/src/: lib.rs
crates/rnovdb-planner/: Cargo.toml
crates/rnovdb-planner/src/: logical.rs  optimizer.rs
crates/rnovdb-security/: Cargo.toml
crates/rnovdb-security/src/: lib.rs
crates/rnovdb-server/: Cargo.toml
crates/rnovdb-server/src/: lib.rs
crates/rnovdb-sql/: Cargo.toml
crates/rnovdb-sql/src/: ast.rs  binder.rs  lexer.rs  lib.rs  parser.rs
crates/rnovdb-storage/: Cargo.toml
crates/rnovdb-storage/src/: lib.rs
crates/rnovdb-txn/: Cargo.toml
crates/rnovdb-txn/src/: lib.rs
crates/rnovdb-types/: Cargo.toml
crates/rnovdb-types/src/: lib.rs
crates/rnovdb-udf/: Cargo.toml
crates/rnovdb-udf/src/: lib.rs
