[workspace]
members = [
    "crates/rnovdb-common",
    "crates/rnovdb-types",
    "crates/rnovdb-sql",
    "crates/rnovdb-planner",
    "crates/rnovdb-executor",
    "crates/rnovdb-txn",
    "crates/rnovdb-index",
    "crates/rnovdb-catalog",
    "crates/rnovdb-storage",
    "crates/rnovdb-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.95"

[workspace.dependencies]
rnovdb-common = { path = "crates/rnovdb-common" }
rnovdb-types = { path = "crates/rnovdb-types" }
rnovdb-sql = { path = "crates/rnovdb-sql" }
rnovdb-planner = { path = "crates/rnovdb-planner" }
rnovdb-executor = { path = "crates/rnovdb-executor" }
rnovdb-txn = { path = "crates/rnovdb-txn" }
rnovdb-index = { path = "crates/rnovdb-index" }
rnovdb-catalog = { path = "crates/rnovdb-catalog" }
rnovdb-storage = { path = "crates/rnovdb-storage" }
