[workspace]
members = [
    "crates/rnmdb-common",
    "crates/rnmdb-types",
    "crates/rnmdb-sql",
    "crates/rnmdb-planner",
    "crates/rnmdb-executor",
    "crates/rnmdb-txn",
    "crates/rnmdb-index",
    "crates/rnmdb-fts",
    "crates/rnmdb-catalog",
    "crates/rnmdb-storage",
    "crates/rnmdb-udf",
    "crates/rnmdb-security",
    "crates/rnmdb-instance",
    "crates/rnmdb-server",
    "crates/rnmdb-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only OR LicenseRef-RNovModularDB-Commercial"
rust-version = "1.95"

[workspace.dependencies]
rnmdb-common = { path = "crates/rnmdb-common" }
rnmdb-types = { path = "crates/rnmdb-types" }
rnmdb-sql = { path = "crates/rnmdb-sql" }
rnmdb-planner = { path = "crates/rnmdb-planner" }
rnmdb-executor = { path = "crates/rnmdb-executor" }
rnmdb-txn = { path = "crates/rnmdb-txn" }
rnmdb-index = { path = "crates/rnmdb-index" }
rnmdb-fts = { path = "crates/rnmdb-fts" }
rnmdb-catalog = { path = "crates/rnmdb-catalog" }
rnmdb-storage = { path = "crates/rnmdb-storage" }
rnmdb-udf = { path = "crates/rnmdb-udf" }
rnmdb-security = { path = "crates/rnmdb-security" }
rnmdb-instance = { path = "crates/rnmdb-instance" }
rnmdb-server = { path = "crates/rnmdb-server" }
rnmdb-cli = { path = "crates/rnmdb-cli" }
tokio = { version = "1", features = ["rt"] }
