[package]
name = "rnmdb-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnmdb-catalog.workspace = true
rnmdb-common.workspace = true
rnmdb-executor.workspace = true
rnmdb-planner.workspace = true
rnmdb-sql.workspace = true
rnmdb-storage.workspace = true
rnmdb-types.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "rnmdb"
path = "src/main.rs"
