[package]
name = "rnmdb-planner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnmdb-common.workspace = true
rnmdb-fts.workspace = true
rnmdb-sql.workspace = true
rnmdb-types.workspace = true

[dev-dependencies]
rnmdb-catalog.workspace = true

[lib]
path = "src/lib.rs"
