[package]
name = "rnmdb-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.11.0-rc.2"
hmac = "0.13.0"
rnmdb-common.workspace = true
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.11.0"

[lib]
path = "src/lib.rs"
