[package]
name = "rnmdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnmdb-cli.workspace = true
rnmdb-common.workspace = true
rnmdb-instance.workspace = true

[dev-dependencies]
rnmdb-types.workspace = true

[lib]
path = "src/lib.rs"
