[package]
name = "rnmdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
tokio-runtime = ["dep:tokio", "rnmdb-cli/tokio-runtime"]

[dependencies]
rnmdb-cli.workspace = true
rnmdb-common.workspace = true
rnmdb-instance.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
rnmdb-types.workspace = true

[lib]
path = "src/lib.rs"
