[package]
name = "rnmdb-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnmdb-common.workspace = true
rnmdb-types.workspace = true
rnmdb-catalog.workspace = true
phf = { version = "0.11", features = ["macros"] }

[lib]
path = "src/lib.rs"
