[package]
name = "rnovdb-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnovdb-catalog.workspace = true
rnovdb-common.workspace = true
rnovdb-executor.workspace = true
rnovdb-planner.workspace = true
rnovdb-sql.workspace = true
rnovdb-storage.workspace = true
rnovdb-types.workspace = true

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "rnovdb"
path = "src/main.rs"
