[package]
name = "rnovdb-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnovdb-common.workspace = true
rnovdb-fts.workspace = true
rnovdb-planner.workspace = true
rnovdb-sql.workspace = true
rnovdb-types.workspace = true

[lib]
path = "src/lib.rs"
