[package]
name = "rnovdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rnovdb-cli.workspace = true
rnovdb-common.workspace = true
rnovdb-instance.workspace = true

[dev-dependencies]
rnovdb-types.workspace = true

[lib]
path = "src/lib.rs"
